--- a/ant/apple/apple.properties
+++ b/ant/apple/apple.properties
@@ -39,6 +39,8 @@ apple.launcher.in=${basedir}/ant/apple/apple-launcher.sh.in
 apple.launcher.out=${dist.dir}/${apple.macos}/${project.name}
 
 apple.installdir=/Applications/${project.name}.app
+apple.datadir.local=$HOME/Library/Application Support/${project.datadir}
+apple.datadir.shared=/Library/Application Support/${project.datadir}
 
 apple.keychain=/Library/Keychains/System.keychain
 
