--- a/ant/project.properties
+++ b/ant/project.properties
@@ -5,6 +5,7 @@ vendor.email=support@qz.io
 
 project.name=QZ Tray
 project.filename=qz-tray
+project.datadir=qz
 
 launch.opts=-Xms512m
 
@@ -27,6 +28,7 @@ dist.jar=${dist.dir}/${project.filename}.jar
 authcert.name=override.crt
 authcert.build=${dist.dir}/${authcert.name}
 authcert.install=!install/${authcert.name}
+autostart.name=.autostart
 
 jar.compress=true
 jar.index=true
