--- a/ant/linux/linux-installer.sh.in
+++ b/ant/linux/linux-installer.sh.in
@@ -38,6 +38,7 @@ mask=755
 destdir="${linux.installdir}"
 shortcut="/usr/share/applications/${project.filename}.desktop"
 jarfile="${destdir}/${project.filename}.jar"
+launcher="${destdir}/${linux.launcher.name}"
 
 # Confirmation dialog
 height=8; width=41
@@ -116,9 +117,8 @@ progress_dialog 25 "Creating directories..."
 mkdir -p "${destdir}" > /dev/null 2>&1
 
 # Shared directory for FileIO operations
-mkdir -p "/srv/${vendor.name}" 2>&1
-chmod 777 "/srv/${vendor.name}"
-
+mkdir -p "${linux.datadir.shared}" 2>&1
+chmod 777 "${linux.datadir.shared}"
 
 progress_dialog 30 "Installing new version..."
 cp -R ./ "${destdir}"
@@ -128,7 +128,7 @@ progress_dialog 40 "Creating desktop shortcut..."
 echo "[Desktop Entry]
 Type=Application
 Name=${project.name}
-Exec=java ${launch.opts} -jar \"${jarfile}\"
+Exec="${launcher}"
 StartupWMClass=${project.name}
 Path=${destdir}
 Icon=${destdir}/${linux.icon}
@@ -258,7 +258,15 @@ for i in /home/* ; do
 done
 
 progress_dialog 94 "Adding startup entry..."
-cp "${shortcut}" "/etc/xdg/autostart/${project.filename}.desktop"
+echo "[Desktop Entry]
+Type=Application
+Name=${project.name}
+Exec="${launcher} -A"
+Path=${destdir}
+Icon=${destdir}/${linux.icon}
+MimeType=application/x-qz;x-scheme-handler/qz;
+Terminal=false
+Comment=${project.name}" > "/etc/xdg/autostart/${project.filename}.desktop"
 
 # Allow oridinary users to write
 chmod 777 "/etc/xdg/autostart/${project.filename}.desktop"
