--- a/ant/firefox/firefox-prefs.js.in
+++ b/ant/firefox/firefox-prefs.js.in
@@ -1,2 +1,3 @@
 pref('general.config.filename', '${firefoxconfig.name}');
+pref('general.config.sandbox_enabled', false);
 pref('general.config.obscure_value', 0);
