--- a/ant/ssl.properties
+++ b/ant/ssl.properties
@@ -47,6 +47,10 @@ locator.name=locator.sh
 locator.in=${basedir}/ant/firefox/${locator.name}.in
 locator.out=${dist.dir}/auth/firefox/${locator.name}
 
+jsonwriter.name=firefox-json-writer.py
+jsonwriter.in=${basedir}/ant/firefox/${jsonwriter.name}
+jsonwriter.out=${dist.dir}/auth/firefox/${jsonwriter.name}
+
 # Trusted SSL installs only
 trusted.crt=!sslcert
 trusted.jks=!sslkey
