--- a/ant/windows/windows.properties
+++ b/ant/windows/windows.properties
@@ -5,6 +5,10 @@ windows.keygen.store=Root
 windows.keygen.name=windows-keygen.js
 windows.keygen.in=${basedir}/ant/windows/${windows.keygen.name}.in
 windows.keygen.out=${dist.dir}/auth/${windows.keygen.name}
+windows.jsonparser.name=windows-json-parser.js
+windows.jsonparser.in=${basedir}/ant/windows/${windows.jsonparser.name}
+windows.jsonparser.out=${dist.dir}/auth/${windows.jsonparser.name}
+
 windows.keygen.tool=certutil.exe
 windows.keygen.install=${windows.keygen.tool} -addstore -f \\"${windows.keygen.store}\\" \\"${ca.crt}\\"
 windows.keygen.uninstall=${windows.keygen.tool} -delstore \\"${windows.keygen.store}\\" \\"!match\\"
