--- a/build.xml
+++ b/build.xml
@@ -221,6 +221,7 @@
         <copy file="${windows.keygen.in}" tofile="${windows.keygen.out}" >
             <filterchain><expandproperties/></filterchain>
         </copy>
+        <copy file="${windows.jsonparser.in}" tofile="${windows.jsonparser.out}" ></copy>
 
         <exec executable="${nsisbin}" failonerror="true" >
             <arg value="${windows.launcher.out}"/>
@@ -346,6 +347,9 @@
             <filterchain><expandproperties/></filterchain>
         </copy>
         <chmod perm="u+x" file="${locator.out}"/>
+
+        <copy file="${jsonwriter.in}" tofile="${jsonwriter.out}" ></copy>
+        <chmod perm="u+x" file="${jsonwriter.out}"/>
 
         <exec executable="${apple.packager.out}" failonerror="true" />
 
