--- a/ant/firefox/locator.sh.in
+++ b/ant/firefox/locator.sh.in
@@ -33,12 +33,13 @@ function get_osx_targetdir()
 			IFS=$'\n'
 			#"/$with_dir.app$", the first $ is the bash variable marker and the second is a wildcard meaning "is the end of the line"
 			targetdir=$($i -dump |grep -E "/$with_dir.app$" |sed "/\/Volumes\//d" |sed "/\/.Trash\//d" |sed "/\/Applications (Parallels)\//d" |cut -d'/' -f2-)
-			IFS=$IFS_backup
-			for r in "${targetdir[@]}"; do
+
+			for r in $targetdir; do
 				#If it matches our top priority location, return. We are done.
 				if [[ "/$r" == "/Applications"* ]]; then
 					dir_out="/$r"
-					return 0
+					return_val=0
+					break
 				#If it matches our second priority, remember it and continue. (remembers last instance)
 				elif [[ "/$r" == "$HOME/Applications"* ]]; then
 					dir_out="/$r"
@@ -51,6 +52,7 @@ function get_osx_targetdir()
 			done
 		fi
 	done
+	IFS=$IFS_backup
 	return $return_val
 }
 
