--- a/ant/windows/windows-keygen.js.in
+++ b/ant/windows/windows-keygen.js.in
@@ -51,6 +51,7 @@ var cnOverride = getArg(2, null);
 var firefoxPortable = getArg(3, null);
 var trusted = { cert: getArg(4, null), key: getArg(5, null) };
 
+var firefoxVer;
 var firefoxInstall;
 
 /**
@@ -59,6 +60,10 @@ var firefoxInstall;
 String.prototype.replaceAll = function(search, replacement) {
     var target = this;
     return target.replace(new RegExp(search, 'g'), replacement);
+};
+
+Array.isArray = function(obj) {
+    return Object.prototype.toString.call(obj) === '[object Array]';
 };
 
 if (typeof console === 'undefined') {
@@ -372,7 +377,7 @@ function getFirefoxInstall() {
 
     //  Determine if Firefox is installed
     var firefoxKey = "HKLM\\Software\\Mozilla\\Mozilla Firefox";
-    var firefoxVer = getRegValue(firefoxKey + "\\");
+    firefoxVer = getRegValue(firefoxKey + "\\");
     if (!firefoxVer) {
         // Look for Extended Support Release
         firefoxVer = getRegValue(firefoxKey + " ESR\\");
@@ -399,6 +404,21 @@ function getFirefoxInstall() {
  */
 function hasFirefoxConflict() {
     if (!getFirefoxInstall()) { return false; }
+
+     // Use policy files for versions >= 62
+     try {
+        var version = firefoxVer.split('.')[0];
+        console.log(" - [success] Parsed Firefox major version: " + version);
+        if (parseInt(version) >= 62) {
+            installFirefoxPolicy();
+            // Toggle-off cert install, favor policy instead
+            firefoxInstall = false;
+            return;
+        }
+     } catch(err) {
+        console.warn("Unable to parse Firefox major version from \"" + version
+            + "\". Falling back to AutConfig mode.");
+     }
 
     console.log("Searching for Firefox AutoConfig conflicts...");
     // AutoConfig rule conflicts to search for
@@ -458,6 +478,18 @@ function deleteFirefoxCertificate() {
     if (!getFirefoxInstall()) { return; }
 
     console.log("Removing from Firefox...");
+
+    // Use policy files for versions >= 62
+    try {
+        var version = firefoxVer.split('.')[0];
+        console.log(" - [skipped] Configured via policies.json, no uninstall needed");
+        if (parseInt(version) >= 62) {
+            return;
+        }
+    } catch(err) {
+        console.warn("Unable to parse Firefox major version from \"" + version
+            + "\". Falling back to AutConfig mode.");
+    }
     var firefoxCfg = firefoxInstall + "\\..\\${firefoxconfig.name}";
 
     // Variable replacements for Firefox config file
@@ -503,6 +535,64 @@ function installFirefoxCertificate() {
     // Install the preference file tells Firefox to launches ${firefoxconfig.name} each time it starts
     var firefoxPrefs = firefoxInstall + "\\..\\defaults\\pref\\${firefoxprefs.name}";
     fso.CopyFile(fixPath("${firefoxprefs.install}"), firefoxPrefs);
+}
+
+/*
+ * Install a Firefox policy to import the system certificates
+ */
+function installFirefoxPolicy() {
+    include('${windows.jsonparser.name}');
+
+    var policyPath = firefoxInstall + "\\..\\distribution\\policies.json";
+    var policyJSON = read(policyPath);
+    try {
+        policy = JSON.parse(policyJSON || "{}");
+    } catch(err) {
+        policy = JSON.parse("{}");
+    }
+    var merge = JSON.parse('{ "policies": { "Certificates": { "ImportEnterpriseRoots": true } } }');
+
+    var before = JSON.stringify(policy, null, 2);
+    mergeJSON(policy, merge, false);
+    var after = JSON.stringify(policy, null, 2);
+
+    write(policyPath, after);
+
+    console.log("\r\npolicy.json (before):\r\n" + before);
+    console.log("\r\npolicy.json (after):\r\n" + after);
+}
+
+/*
+ * Writes values from append to base, deep copying if necessary
+ * See also firefox-json-writer.py: merge_json
+ */
+function mergeJSON(base, append, overwrite) {
+    if (!append) { return; }
+
+    for(var key in append) {
+        if (append.hasOwnProperty(key)) {
+            var val = append[key];
+            var baseVal = base[key];
+
+            if (baseVal === undefined) {
+                base[key] = val;
+            } else if ((val && typeof val == 'object') && (baseVal && typeof baseVal == 'object')) {
+                if (Array.isArray(baseVal) && Array.isArray(val)) {
+                    if (overwrite) {
+                        base[key] = val;
+                    } else {
+                        base[key] = base[key].concat(val);
+                    }
+                } else {
+                    mergeJSON(baseVal, val, overwrite);
+                }
+            } else if (overwrite) {
+                base[key] = val;
+            }
+        }
+    }
+
+    return base;
 }
 
 /*
@@ -676,4 +766,60 @@ function alert(message, title) {
     } else {
         shell.Popup(message, 0, title == null ? "Warning" : title, 48);
     }
+}
+
+/*
+ * Write a text file at path containing the specified data creating
+ * parent directories as needed
+ */
+function write(path, data) {
+	var ForWriting = 2;
+	var fso = new ActiveXObject("Scripting.FileSystemObject");
+	if (!fso.FileExists(path)) {
+		mkdirs(fso.GetParentFolderName(path), fso);
+		fso.CreateTextFile(path);
+	}
+	var file = fso.GetFile(path);
+	var stream = file.OpenAsTextStream(ForWriting);
+	var data = stream.Write(data);
+	stream.Close();
+}
+
+/*
+ * Reads a text file at path and returns contents as a string
+ */
+function read(path) {
+	var data;
+	var ForReading = 1;
+	var fso = new ActiveXObject("Scripting.FileSystemObject");
+	if (fso.FileExists(path)) {
+		var file = fso.GetFile(path);
+		if (file.Size > 0) {
+			var stream = file.OpenAsTextStream(ForReading);
+			data = stream.readAll();
+			stream.Close();
+		}
+	}
+	return data;
+}
+
+/*
+ * Creates a directory and all parents using the provided FileSystemObject handle
+ */
+function mkdirs(path, fso) {
+	if(!fso.FolderExists(path) && path !== "") {
+		if (!fso.FolderExists(fso.GetParentFolderName(path))) {
+			mkdirs(fso.GetParentFolderName(path), fso);
+		}
+		fso.CreateFolder(path);
+	}
+}
+
+/*
+ * Imports a JavaScript library by calling eval on the source content
+ */
+function include(path) {
+	var fso = new ActiveXObject("Scripting.FileSystemObject");
+	path = fso.GetParentFolderName(WScript.ScriptFullName) + "\\" + path;
+	eval(read(path));
 }
