--- a/ant/apple/apple.properties
+++ b/ant/apple/apple.properties
@@ -6,7 +6,8 @@ apple.scripts=${build.dir}/scripts
 apple.packager.name=apple-packager.sh
 apple.packager.in=${basedir}/ant/apple/${apple.packager.name}.in
 apple.packager.out=${build.dir}/${apple.packager.name}
-apple.packager.cert=${basedir}/ant/apple/apple-certificate.cer
+apple.packager.cert=${basedir}/ant/apple/apple-packager.cer
+apple.codesign.cert=${basedir}/ant/apple/apple-codesign.cer
 apple.packager.signid=P5DMU6659X
 apple.intermediate.cert=${basedir}/ant/apple/apple-intermediate.cer
 
